# emptylog

./: .gitignore  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: lint.yml  tests_and_coverage.yml  tests_and_coverage_old.yml
emptylog/: __init__.py  abstract_logger.py  accumulated_data.py  call_data.py  empty_logger.py  loggers_group.py  memory_logger.py  printing_logger.py  protocol.py  protocols.py
tests/: test_abstract_logger.py  test_accumulated_data.py  test_call_data.py  test_empty_logger.py  test_loggers_group.py  test_memory_logger.py  test_printing_logger.py  test_protocol.py  test_protocols.py
