[build-system]
requires = ['setuptools==68.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'emptylog'
version = '0.0.10'
authors = [
  { name='Evgeniy Blinov', email='zheni-b@yandex.ru' },
]
description = 'Mimicking the logger protocol'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'printo>=0.0.5',
]
classifiers = [
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: POSIX',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'License :: OSI Approved :: MIT License',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Testing',
  'Topic :: Software Development :: Testing :: Mocking',
  'Topic :: Software Development :: Testing :: Unit',
  'Topic :: System :: Logging',
  'Intended Audience :: Developers',
  'Typing :: Typed',
]
keywords = [
    'logging',
    'protocols',
    'loggers mocks',
]

[tool.setuptools.package-data]
"emptylog" = ["py.typed"]

[tool.mutmut]
paths_to_mutate="emptylog"
runner="pytest"

[project.urls]
'Source' = 'https://github.com/pomponchik/emptylog'
'Tracker' = 'https://github.com/pomponchik/emptylog/issues'
